--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -59,12 +59,20 @@ layout: default
   </header>
 
   <article class="post-content">
-    {% if page.toc and page.toc.beginning %}
-      <div id="table-of-contents">
-        {% toc %}
-      </div>
-      <hr>
-    {% endif %}
+    {%- comment -%}
+      NOTE:
+      GitHub Pages（Jekyll 3.10）环境不支持第三方插件标签 `{% toc %}`。
+      如果需要目录（TOC），请在文章 Markdown 内容中添加：
+      
+      * 目录
+      {:toc}
+      
+      并在 _config.yml 中确保：
+      markdown: kramdown
+      kramdown:
+        toc_levels: 1..3
+    {%- endcomment -%}
+
     <div id="markdown-content">
       {{ content }}
     </div>
