--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -1,30 +1,81 @@
 ---
 layout: default
 ---
+{% assign year = page.date | date: '%Y' %}
+{% assign tags = page.tags | join: '' %}
+{% assign categories = page.categories | join: '' %}
+{% assign url_beginning = page.url | slice: 0, 6 %}
+
 {% if page._styles %}
-  <!-- Page/Post style -->
+  <!-- Page style -->
   <style type="text/css">
     {{ page._styles }}
   </style>
 {% endif %}
 
-<div class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-description">{{ page.description }}</p>
+<div class="page">
+  <header class="page-header">
+    <h1 class="page-title">{{ page.title }}</h1>
+    {% if page.date or page.author or page.last_updated or page.meta %}
+    <p class="page-meta">
+      {% if page.date %}Created on {{ page.date | date: '%B %d, %Y' }}{% endif %}
+      {% if page.author %}{% if page.date %} • {% endif %}by {{ page.author }}{% endif %}
+      {% if page.last_updated %}{% if page.date or page.author %} • {% endif %}last updated on {{ page.last_updated | date: '%B %d, %Y' }}{% endif %}
+      {% if page.meta %} • {{ page.meta }}{% endif %}
+    </p>
+    {% endif %}
+
+    {% if tags != '' or categories != '' %}
+    <p class="page-tags">
+      {% if tags != '' %}
+        {% for tag in page.tags %}
+          {% if url_beginning == '/blog/' %}
+            <a href="{{ tag | slugify | prepend: '/blog/tag/' | relative_url }}">
+              <i class="fa-solid fa-hashtag fa-sm"></i> {{ tag }}
+            </a>
+          {% else %}
+            <i class="fa-solid fa-hashtag fa-sm"></i> {{ tag }}
+          {% endif %}
+          {% unless forloop.last %}&nbsp;{% endunless %}
+        {% endfor %}
+      {% endif %}
+
+      {% if categories != '' %}
+        {% if tags != '' %}&nbsp; &middot; &nbsp;{% endif %}
+        {% for category in page.categories %}
+          {% if url_beginning == '/blog/' %}
+            <a href="{{ category | slugify | prepend: '/blog/category/' | relative_url }}">
+              <i class="fa-solid fa-tag fa-sm"></i> {{ category }}
+            </a>
+          {% else %}
+            <i class="fa-solid fa-tag fa-sm"></i> {{ category }}
+          {% endif %}
+          {% unless forloop.last %}&nbsp;{% endunless %}
+        {% endfor %}
+      {% endif %}
+    </p>
+    {% endif %}
   </header>
 
-  <article>
-    {{ content }}
+  <article class="page-content">
+    {%- comment -%}
+      NOTE: GitHub Pages (Jekyll 3.10) doesn't load third-party tags like
+      {% toc %}, {% bibliography %}, {% cite %}, {% twitter %}, etc.
+      Keep page content in pure Markdown/HTML or switch to a custom Actions build.
+    {%- endcomment -%}
+
+    <div id="markdown-content">
+      {{ content }}
+    </div>
   </article>
 
-  {% if page.related_publications %}
-    <h2>References</h2>
-    <div class="publications">
-      {% bibliography --cited_in_order %}
-    </div>
+  {% if page.citation %}
+    {% include citation.liquid %}
   {% endif %}
 
+  {% if site.disqus_shortname and page.disqus_comments %}
+    {% include disqus.liquid %}
+  {% endif %}
   {% if site.giscus and page.giscus_comments %}
     {% include giscus.liquid %}
   {% endif %}
